--- a/styles.css
+++ b/styles.css
@@ -12,17 +12,32 @@
 
 .status{
     width: 90%;
-    height: 120px;
     margin:auto;
-    background-color:red;
+    background-color:white;
     border-radius: 7%;
 }
 
 .status h1{
     font-family: 'Russo One', sans-serif;
-    font-size: 15px;
+    font-size: 20px;
     margin-left:10px;
-    margin-top:10px;
+}
+
+.status img{
+    width: 50%;
+    border-radius:50%;
+}
+
+.status div{
+    width: 40%;
+    float:right;
+    height: 20px;
+}
+
+.status h2{
+    font-size:20px;
+    margin-bottom: 10px;
+    color:cyan;
 }
 
 .daily-goals h2{
@@ -33,7 +48,8 @@
 }
 
 
-.container1 { margin-top: 10px; }
+.container1 { margin-top: 10px; 
+margin:auto;}
 
 .progress-bar-vertical {
   margin-top: 10px;   
@@ -54,6 +70,11 @@
   -o-transition: height 0.6s ease;
   transition: height 0.6s ease;
 }
+
+/*
+    Task 
+*/
+
 .task{
     width: 90%;
     margin:auto;
@@ -110,3 +131,73 @@
 .tasklabel{
     border-top-left-radius: 110%;
 }
+
+
+/*  Exclusivamente solo para el footer */
+.boton{
+    text-align: center;
+}
+
+.footer{
+    width: 100%;
+    height: 50px;
+    bottom:0;
+    position: fixed;
+    background-color:white;
+}
+
+.footer img{
+    float: right;
+    height: 25px;
+    margin-right:20%;
+    margin-bottom: 20px;
+}
+
+.central {
+    font-family: 'Russo One', sans-serif;
+    width: 90%;
+    height: auto;
+    border-radius: 10%;
+    background-color: #f2f2f2;
+    color: blue;
+    margin-left: 10px;
+    margin: auto;
+}
+
+.p {
+    color: grey;
+    margin-left: 25%;
+}
+
+.Bonus {
+    margin-left: 40%;
+    background-color: white;
+}
+
+.h3 {
+    margin-top: 80%;
+    margin-left: 35%;
+    color: black;
+    font-size: 15px;
+}
+
+.h2 {
+    margin-left: 15%;
+    font-size: 15px;
+    color:black;    
+}
+
+.btn-btn-primary {
+    border-radius: 20%;
+    background-color: aqua;
+    margin-left: 41%;
+}
+
+.img {
+    margin-left: 30%;
+}
+
+.color_boton{
+    border-radius: 20px;
+}
+
